--- a/app/static/index.html
+++ b/app/static/index.html
@@ -15,6 +15,9 @@
                 <button id="getUrlBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
                     Obtener de URL
                 </button>
+                <button id="clearUrlBtn" class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-colors">
+                    Vaciar
+                </button>
             </div>
             <textarea id="urlText" class="w-full p-2 border rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 h-24 resize-none" placeholder="Ingrese el texto o la Url aquí..."></textarea>
         </div>
